web accessibility & ipad overflow fix

--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,6 +1,7 @@
 .main {
   overflow: hidden;
-  min-height: max-content;
+  /* trying to solve bug on ipad display of website. Scroll is entire extra page on all pages*/
+  max-height: max-content;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
